# AzureKinectView

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
src/: DataAcquirement.cpp  DataAcquirement.h  PointCloudViewer.cpp  PointCloudViewer.h  main.cpp
